app/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compredictstage
  namespace: flux-system
  labels:
    name: nginx-deploy
spec:
  selector:
    matchLabels:
      app: compredictstage
  replicas: 1
  template:
    metadata:
      labels:
        app: compredictstage
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: environment
                    operator: In
                    values:
                      - Development
              weight: 1
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - compredictdemodev
      containers:
        - name: nginx
          image: nginx:1.17.3
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 1m
              memory: 3Mi
            limits:
              cpu: 1m
              memory: 12Mi
