app/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compredictstage
  namespace: flux-system
  labels:
    name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
